--- a/css/mypage.css
+++ b/css/mypage.css
@@ -57,28 +57,24 @@
 }
 
 .gr {
-  display: grid;
-  grid-template-columns: 33% 33%;
-  margin-top: 100px;
+    margin-top: 100px;
+    display: flex;
+    width: 700px;
+    height: 250px;
 }
 
 .gr img {
-  position: absolute;
-  width: 70%;
-  height: 15vw;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%)
+    width: 100%;
+    height: 200px;
 }
 
 .gr>div {
-  position: relative;
-  width: 94%;
-  height: 18vw;
-  border: solid 1px black;
-  padding: 3%;
-  background-color: gray;
-  margin-bottom: 50px;
+    position: relative;
+    width: 94%;
+    height: 19vw;
+    border: solid 1px black;
+    padding: 3%;
+    background-color: gray;
 }
 
 .gr2 {
@@ -175,4 +171,21 @@
 
 .ham3 {
   transform: translatey(-10px) rotate(-135deg);
+}
+
+.gr div {
+    position: relative;
+    height: 200px;
+}
+
+.gr div p {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%,-40%);
+    color: white;
+    background-color: #cccccc59;
+    z-index: 2;
+    font-size: 18px;
+    padding: 5px;
 }
